# Chimera-tenx

./: .coderabbit.yaml  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: agent.mdc  chimera-core.mdc  python_uv_dockerfile.mdc  research-architecture.mdc
.github/workflows/: main.yml
.specify/memory/: constitution.md
docs/: Project-Chimera-Report.md
docs/analysis/: chimera-openclaw-role.md  social-protocols-chimera.md
docs/insights/: agent-infrastructure-pattern.md  insights.md
docs/project-chimera-srs-challenge/: project-chimera-challenge.md
research/: architecture_strategy.md  tooling_strategy.md
skills/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
specs/001-autonomous-influencer-agents/: spec.md
specs/001-autonomous-influencer-agents/checklists/: requirements.md
tests/: __init__.py  test_skills_interface.py  test_trend_fetcher.py
